# SWMLA

./: .gitignore  LICENSE  README.md  pyproject.toml
Protein_Language_Models/ProteinMPNN_test/: msa_alignment.fasta  visualization.ipynb
Protein_Language_Models/ProteinMPNN_test/scored/score_only/: 3sg3_fasta_1.npz  3sg3_fasta_2.npz  3sg3_fasta_3.npz  3sg3_fasta_4.npz  3sg3_fasta_5.npz  3sg3_fasta_6.npz  3sg3_pdb.npz
Protein_Language_Models/ProteinMPNN_test/seqs/: 3sg3.fa
Supervised Models/: Adaline.ipynb
Supervised Models/Classifiers/: Perceptron.ipynb  Scikit_Learn_Classifiers.ipynb  Support_Vector_Classifiers.ipynb
Supervised Models/Data_Preproccessing/: Data_Preprocessing.ipynb
Unsupervised Models/: Getting_started_with_torch.ipynb
Unsupervised Models/data/embeddings/: RCaMP1h_10AP_ID_Effect.csv  RCaMP1h_10AP_decay_ID_Effect.csv
